methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:4: error: not found: value vubiscuit
                if(estSurBiscuit()){vubiscuit=true}}
                                    ^